# src/app/openapi-gen/model/orderDetailDTO.ts
@@ -1,116 +1,119 @@
 /**
  * Supplier Rating Software API
  *
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
 
-export interface OrderDetailDTO {
-  /**
-   * Mapped to NAME (Short description)
-   */
-  name: string;
-  /**
-   * Mapped to BESTELLUNG_HK (Vocabulary BESTELLUNGHK)
-   */
-  mainCategory: OrderDetailDTO.MainCategoryEnum;
-  /**
-   * Mapped to BESTELLUNG_UK (Vocabulary BESTELLUNGFK)
-   */
-  subCategory: OrderDetailDTO.SubCategoryEnum;
-  /**
-   * Mapped to BEZEICHNUNG
-   */
-  details?: string;
-  /**
-   * Mapped to RYTHMUS [sic!]
-   */
-  frequency?: string;
-  /**
-   * Mapped to ANSPRECHPERSON
-   */
-  contactPerson?: string;
-  /**
-   * Mapped to ANSPRECHPERSON_EMAIL
-   */
-  contactEmail?: string;
-  /**
-   * Mapped to ANSPRECHPERSON_TELEFON
-   */
-  contactPhone?: string;
-  /**
-   * Mapped to BESCHAFFUNGSGRUND
-   */
-  reason: string;
-  /**
-   * Mapped to BESTELLART
-   */
-  orderMethod?: string;
-  /**
-   * Mapped to BESTELLER (Name of initiator)
-   */
-  orderedBy: string;
-  /**
-   * Mapped to BESTELLDATUM (YYYY-MM-DD)
-   */
-  orderDate: string;
-  /**
-   * Mapped to LIEFERDATUM (YYYY-MM-DD)
-   */
-  deliveryDate?: string;
-  /**
-   * Mapped to KOMMENTAR (General comment)
-   */
-  orderComment?: string;
-  /**
-   * OpenBIS PermID
-   */
-  id: string;
-  /**
-   * OpenBIS Code
-   */
-  code: string;
-  /**
-   * Helps the frontend to show if already rated.
-   */
-  ratingStatus?: OrderDetailDTO.RatingStatusEnum;
-  /**
-   * PermID of the parent supplier
-   */
-  supplierId?: string;
-  /**
-   * Name of the parent supplier (for display)
-   */
-  supplierName?: string;
-  /**
-   * PermID of the linked rating (if exists), otherwise null.
-   */
-  ratingId?: string | null;
+
+export interface OrderDetailDTO { 
+    /**
+     * Mapped to NAME (Short description)
+     */
+    name: string;
+    /**
+     * Mapped to BESTELLUNG_HK (Vocabulary BESTELLUNGHK)
+     */
+    mainCategory: OrderDetailDTO.MainCategoryEnum;
+    /**
+     * Mapped to BESTELLUNG_UK (Vocabulary BESTELLUNGFK)
+     */
+    subCategory: OrderDetailDTO.SubCategoryEnum;
+    /**
+     * Mapped to BEZEICHNUNG
+     */
+    details?: string;
+    /**
+     * Mapped to RYTHMUS [sic!]
+     */
+    frequency?: string;
+    /**
+     * Mapped to ANSPRECHPERSON
+     */
+    contactPerson?: string;
+    /**
+     * Mapped to ANSPRECHPERSON_EMAIL
+     */
+    contactEmail?: string;
+    /**
+     * Mapped to ANSPRECHPERSON_TELEFON
+     */
+    contactPhone?: string;
+    /**
+     * Mapped to BESCHAFFUNGSGRUND
+     */
+    reason: string;
+    /**
+     * Mapped to BESTELLART
+     */
+    orderMethod?: string;
+    /**
+     * Mapped to BESTELLER (Name of initiator)
+     */
+    orderedBy: string;
+    /**
+     * Mapped to BESTELLDATUM (YYYY-MM-DD)
+     */
+    orderDate: string;
+    /**
+     * Mapped to LIEFERDATUM (YYYY-MM-DD)
+     */
+    deliveryDate?: string;
+    /**
+     * Mapped to KOMMENTAR (General comment)
+     */
+    orderComment?: string;
+    /**
+     * OpenBIS PermID
+     */
+    id: string;
+    /**
+     * OpenBIS Code
+     */
+    code: string;
+    /**
+     * Helps the frontend to show if already rated.
+     */
+    ratingStatus?: OrderDetailDTO.RatingStatusEnum;
+    /**
+     * PermID of the parent supplier
+     */
+    supplierId?: string;
+    /**
+     * Name of the parent supplier (for display)
+     */
+    supplierName?: string;
+    /**
+     * PermID of the linked rating (if exists), otherwise null.
+     */
+    ratingId?: string | null;
 }
 export namespace OrderDetailDTO {
-  export const MainCategoryEnum = {
-    Beschaffung: 'Beschaffung',
-    Dienstleistung: 'Dienstleistung',
-  } as const;
-  export type MainCategoryEnum = (typeof MainCategoryEnum)[keyof typeof MainCategoryEnum];
-  export const SubCategoryEnum = {
-    Beratung: 'Beratung',
-    Dienstleistung: 'Dienstleistung',
-    GertWerkzeug: 'Gerät/Werkzeug',
-    Maschine: 'Maschine',
-    Messgerte: 'Messgeräte',
-    Messmittel: 'Messmittel',
-    PcHardware: 'PC Hardware',
-    PcSoftware: 'PC Software',
-    Prfmaschine: 'Prüfmaschine',
-  } as const;
-  export type SubCategoryEnum = (typeof SubCategoryEnum)[keyof typeof SubCategoryEnum];
-  export const RatingStatusEnum = {
-    Rated: 'RATED',
-    Pending: 'PENDING',
-  } as const;
-  export type RatingStatusEnum = (typeof RatingStatusEnum)[keyof typeof RatingStatusEnum];
+    export const MainCategoryEnum = {
+        Beschaffung: 'Beschaffung',
+        Dienstleistung: 'Dienstleistung'
+    } as const;
+    export type MainCategoryEnum = typeof MainCategoryEnum[keyof typeof MainCategoryEnum];
+    export const SubCategoryEnum = {
+        Beratung: 'Beratung',
+        Dienstleistung: 'Dienstleistung',
+        GertWerkzeug: 'Gerät/Werkzeug',
+        Maschine: 'Maschine',
+        Messgerte: 'Messgeräte',
+        Messmittel: 'Messmittel',
+        PcHardware: 'PC Hardware',
+        PcSoftware: 'PC Software',
+        Prfmaschine: 'Prüfmaschine'
+    } as const;
+    export type SubCategoryEnum = typeof SubCategoryEnum[keyof typeof SubCategoryEnum];
+    export const RatingStatusEnum = {
+        Rated: 'RATED',
+        Pending: 'PENDING'
+    } as const;
+    export type RatingStatusEnum = typeof RatingStatusEnum[keyof typeof RatingStatusEnum];
 }
+
+
