# src/app/openapi-gen/model/supplierDetailDTO.ts
@@ -1,93 +1,96 @@
 /**
  * Supplier Rating Software API
  *
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
  * Do not edit the class manually.
  */
+import { OrderDetailDTO } from './orderDetailDTO';
 import { RatingStats } from './ratingStats';
-import { OrderSummaryDTO } from './orderSummaryDTO';
 
-export interface SupplierDetailDTO {
-  /**
-   * Mapped to $NAME
-   */
-  name: string;
-  /**
-   * Mapped to KUNDENNUMMER
-   */
-  customerNumber: string;
-  /**
-   * Mapped to LIEFERANTEN_ZUSATZ
-   */
-  addition?: string;
-  /**
-   * Mapped to LIEFERANTEN_STRASSE
-   */
-  street: string;
-  /**
-   * Mapped to LIEFERANTEN_POSTFACH
-   */
-  poBox?: string;
-  /**
-   * Mapped to LIEFERANTEN_LAND (Vocabulary LIEFERANTEN_LAND)
-   */
-  country: SupplierDetailDTO.CountryEnum;
-  /**
-   * Mapped to LIEFERANTEN_POSTLEITZAHL
-   */
-  zipCode: string;
-  /**
-   * Mapped to LIEFERANTEN_ORT
-   */
-  city: string;
-  /**
-   * Mapped to LIEFERANTEN_WEBLINK
-   */
-  website?: string;
-  /**
-   * Mapped to LIEFERANTEN_EMAIL
-   */
-  email?: string;
-  /**
-   * Mapped to LIEFERANTEN_TELEFON
-   */
-  phoneNumber?: string;
-  /**
-   * Mapped to MWST
-   */
-  vatId: string;
-  /**
-   * Mapped to KONDITIONEN
-   */
-  conditions: string;
-  /**
-   * Mapped to KUNDENINFORMATION
-   */
-  customerInfo?: string;
-  /**
-   * OpenBIS PermID (Stable Identifier)
-   */
-  id: string;
-  /**
-   * OpenBIS Code (Business Identifier)
-   */
-  code: string;
-  stats: RatingStats;
-  /**
-   * List of all orders belonging to this supplier
-   */
-  orders?: OrderSummaryDTO[];
+
+export interface SupplierDetailDTO { 
+    /**
+     * Mapped to $NAME
+     */
+    name: string;
+    /**
+     * Mapped to KUNDENNUMMER
+     */
+    customerNumber: string;
+    /**
+     * Mapped to LIEFERANTEN_ZUSATZ
+     */
+    addition?: string;
+    /**
+     * Mapped to LIEFERANTEN_STRASSE
+     */
+    street: string;
+    /**
+     * Mapped to LIEFERANTEN_POSTFACH
+     */
+    poBox?: string;
+    /**
+     * Mapped to LIEFERANTEN_LAND (Vocabulary LIEFERANTEN_LAND)
+     */
+    country: SupplierDetailDTO.CountryEnum;
+    /**
+     * Mapped to LIEFERANTEN_POSTLEITZAHL
+     */
+    zipCode: string;
+    /**
+     * Mapped to LIEFERANTEN_ORT
+     */
+    city: string;
+    /**
+     * Mapped to LIEFERANTEN_WEBLINK
+     */
+    website?: string;
+    /**
+     * Mapped to LIEFERANTEN_EMAIL
+     */
+    email?: string;
+    /**
+     * Mapped to LIEFERANTEN_TELEFON
+     */
+    phoneNumber?: string;
+    /**
+     * Mapped to MWST
+     */
+    vatId: string;
+    /**
+     * Mapped to KONDITIONEN
+     */
+    conditions: string;
+    /**
+     * Mapped to KUNDENINFORMATION
+     */
+    customerInfo?: string;
+    /**
+     * OpenBIS PermID (Stable Identifier)
+     */
+    id: string;
+    /**
+     * OpenBIS Code (Business Identifier)
+     */
+    code: string;
+    stats: RatingStats;
+    /**
+     * List of all orders belonging to this supplier
+     */
+    orders?: Array<OrderDetailDTO>;
 }
 export namespace SupplierDetailDTO {
-  export const CountryEnum = {
-    Ch: 'CH',
-    D: 'D',
-    F: 'F',
-    Fl: 'FL',
-    Nl: 'NL',
-  } as const;
-  export type CountryEnum = (typeof CountryEnum)[keyof typeof CountryEnum];
+    export const CountryEnum = {
+        Ch: 'CH',
+        D: 'D',
+        F: 'F',
+        Fl: 'FL',
+        Nl: 'NL'
+    } as const;
+    export type CountryEnum = typeof CountryEnum[keyof typeof CountryEnum];
 }
+
+
